# GameEngine

./: CMakeLists.txt  CMakePresets.json  Readme.md
include/: VbaVbo.h  shader.h  window.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: VbaVbo.cpp  glad.c  main.cpp  shader.cpp  window.cpp  windowImpl.cpp
